--- a/atividade-4/styles.css
+++ b/atividade-4/styles.css
@@ -1,6 +1,5 @@
 header {
     background-color: aqua;
-    width: 100%;
     height: 100px;
     padding: 10px;
 }
@@ -38,8 +37,8 @@ ul {
 
   li a {
     display: block;
-    color: white;
     text-align: center;
+    color: black;
     padding: 16px;
     text-decoration: none;
   }
