--- a/roteiro-2/Código Inicial do Roteiro 1 - HTML e CSS/Código Inicial do Roteiro 1 - HTML e CSS/styles.css
+++ b/roteiro-2/Código Inicial do Roteiro 1 - HTML e CSS/Código Inicial do Roteiro 1 - HTML e CSS/styles.css
@@ -11,7 +11,18 @@ body {
     background-color: #f8f8f8;
 }
 
-.container {
+.container-content {
+    width: 90%;
+    margin: 0 auto;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.container-header {
     width: 90%;
     margin: 0 auto;
     padding: 20px;
@@ -20,17 +31,26 @@ body {
     justify-content: space-between;
 }
 
+.container-cardapio {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
 header {
     background-color: #333;
     color: #fff;
     padding: 10px 0;
-    position: fixed;
     width: 100%;
     top: 0;
     z-index: 1000;
     background-image: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.6)), url('assets/header-bg.jpg');
     background-size: cover;
     background-position: center;
+    position: sticky;
 }
 
 header h1 {
@@ -110,4 +130,10 @@ footer {
     background-image: linear-gradient(to right, rgba(0,0,0,0.8), rgba(0,0,0,0.6)), url('assets/baguete.webp');
     background-size: cover;
     background-position: center;
+}
+
+.carousel-img {
+    object-fit: cover;
+    width: 640px;
+    height: 640px;
 }
